--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeviceHub</title>
+    <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <p>DeviceHub</p>
+    <header class="header">
+        <a href="#" class="logo"><span>Device</span>Hub</a>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#laptops">Laptops</a></li>
+                <li><a href="#phones">Phones</a></li>
+            </ul>
+        </nav>
+        <a href="./pages/contact.html" class="contact">Contact</a>
+    </header>
 </body>
 </html>
