--- a/index.html
+++ b/index.html
@@ -20,5 +20,27 @@
         </nav>
         <a href="./pages/contact.html" class="contact">Contact</a>
     </header>
+
+    <main>
+        
+
+    </main>
+
+    <footer class="footer">
+        <div class="social">
+            <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+            <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+            <a href="#"><i class='bx bxl-instagram-alt'></i></a>
+            <a href="#"><i class='bx bxl-twitter'></i></a>
+        </div>
+        <ul class="list">
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+        </ul>
+        <p class="copyright">&copy; 2025 DeviceHub | All Rights Reserved</p>
+    </footer>
 </body>
 </html>
