--- a/index.html
+++ b/index.html
@@ -145,5 +145,6 @@
         </ul>
         <p class="copyright">&copy; 2025 DeviceHub | All Rights Reserved</p>
     </footer>
+    <script src="js/main.js"></script>
 </body>
 </html>
